<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_splash_top"
                android:layout_marginStart="@dimen/_20sdp"
                android:scaleType="fitStart"
                android:layout_weight="1"
                android:layout_gravity="top|end"
                android:contentDescription="@string/top_image" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scaleType="fitEnd"
                android:src="@drawable/ic_splash_bottom"
                android:contentDescription="@string/bottom_image"
                android:layout_gravity="bottom|start"/>

        </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    >

    <ImageView
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:src="@drawable/ic_logo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:text="@string/splash_title"
        android:fontFamily="@font/poppins_bold"
        android:textSize="@dimen/extra_large"
        android:textColor="@color/black"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/splash_description"
        android:fontFamily="@font/poppins_regular"
        android:textAlignment="center"
        android:layout_marginHorizontal="@dimen/_24sdp"
        android:textSize="@dimen/normal"
        android:textColor="@color/grey"
        />


</LinearLayout>
    </FrameLayout>
</layout>