<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include android:id="@+id/app_bar"
            layout="@layout/app_bar"/>
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_12sdp"
                android:orientation="vertical"
                >

                <LinearLayout
                    android:id="@+id/ll_life_insurance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_policies"
                    android:layout_marginVertical="@dimen/_6sdp"
                    android:padding="@dimen/_12sdp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/life_insurance"
                        android:fontFamily="@font/poppins_regular"
                        android:textColor="@color/black"
                        android:textSize="@dimen/normal"
                        />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_health_insurance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_policies"
                    android:layout_marginVertical="@dimen/_6sdp"
                    android:padding="@dimen/_12sdp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/health_insurance"
                        android:fontFamily="@font/poppins_regular"
                        android:textColor="@color/black"
                        android:textSize="@dimen/normal"
                        />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_car_insurance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_policies"
                    android:layout_marginVertical="@dimen/_6sdp"
                    android:padding="@dimen/_12sdp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/car_insurance"
                        android:fontFamily="@font/poppins_regular"
                        android:textColor="@color/black"
                        android:textSize="@dimen/normal"
                        />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_wc_insurance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_policies"
                    android:layout_marginVertical="@dimen/_6sdp"
                    android:padding="@dimen/_12sdp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/wc_insurance"
                        android:fontFamily="@font/poppins_regular"
                        android:textColor="@color/black"
                        android:textSize="@dimen/normal"
                        />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_fire_insurance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_policies"
                    android:layout_marginVertical="@dimen/_6sdp"
                    android:padding="@dimen/_12sdp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/fire_insurance"
                        android:fontFamily="@font/poppins_regular"
                        android:textColor="@color/black"
                        android:textSize="@dimen/normal"
                        />

                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>
</layout>