<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="@dimen/_40sdp"
            android:layout_marginHorizontal="@dimen/_12sdp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                >

                <ImageView
                    android:id="@+id/iv_back"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:src="@drawable/ic_back"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/forgot_title"
                    android:textColor="@color/black"
                    android:textSize="@dimen/extra_large" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_20sdp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/forgot_description"
                android:textColor="@color/black"
                android:textSize="@dimen/normal" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginVertical="@dimen/_8sdp"
                >

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ti_mobile"
                    style="@style/TextInputOuterFieldStyle"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_mobile"
                        style="@style/EditTextStyle"
                        android:hint="@string/user_id"
                        android:inputType="text"
                        android:paddingVertical="@dimen/_3sdp"
                        android:paddingStart="@dimen/_30sdp"
                        android:paddingEnd="@dimen/_4sdp"/>
                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:layout_width="@dimen/_18sdp"
                    android:layout_height="@dimen/_18sdp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/_8sdp"
                    android:src="@drawable/ic_mobile"
                    app:tint="@color/black" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/btn_continue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_20sdp"
                android:background="@drawable/round"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/continu"
                    android:textColor="@color/white"
                    android:textSize="@dimen/medium" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>