<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="@dimen/_50sdp">

            <ImageView
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_60sdp"
                    android:src="@drawable/ic_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/sign_in"
                android:textColor="@color/black"
                android:textSize="@dimen/over_large" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_24sdp"
                android:layout_marginBottom="@dimen/_12sdp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/sign_in_description"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/normal" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_marginVertical="@dimen/_8sdp"
                >

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ti_mobile"
                    style="@style/TextInputOuterFieldStyle"
                    >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_mobile"
                    style="@style/EditTextStyle"
                    android:hint="@string/user_id"
                    android:inputType="text"
                    android:paddingVertical="@dimen/_3sdp"
                    android:paddingStart="@dimen/_30sdp"
                    android:paddingEnd="@dimen/_4sdp"/>
                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:layout_width="@dimen/_18sdp"
                    android:layout_height="@dimen/_18sdp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/_8sdp"
                    android:src="@drawable/ic_mobile"
                    app:tint="@color/black" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_marginVertical="@dimen/_8sdp"
               >

                <com.google.android.material.textfield.TextInputLayout
                    app:passwordToggleEnabled="true"
                   style="@style/TextInputOuterFieldStyle"
                    >
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_password"
                    style="@style/EditTextStyle"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingVertical="@dimen/_3sdp"
                    android:paddingStart="@dimen/_30sdp"
                    />
                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:layout_width="@dimen/_18sdp"
                    android:layout_height="@dimen/_18sdp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/_8sdp"
                    android:src="@drawable/ic_password"
                    app:tint="@color/black" />


            </RelativeLayout>


            <LinearLayout
                android:id="@+id/btn_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_12sdp"
                android:background="@drawable/round"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/sign_in"
                    android:textColor="@color/white"
                    android:textSize="@dimen/medium" />
            </LinearLayout>


            <TextView
                android:id="@+id/tv_forgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_4sdp"
                android:fontFamily="@font/bold"
                android:text="@string/forgot_password"
                android:textColor="@color/primary_color"
                android:textSize="@dimen/medium" />


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>